# obsidian-cli

./: .envrc  .func.sh  .gitignore  .jk.yml  .tmuxp.yaml  MANIFEST.in  README.md  db.sqlite  db2.sqlite  deploy.sh  monad.py  obs  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
app/: __main__.py  obsidian.py  obsidian_cli.py  obsidian_open  obsidian_search  obsidian_vault_id
data/: obsidian links.md
obsidian_cli/: __main__.py  _types.py  analysis.py  core.py  cte.py  db.py  db_.py  obsidian_cli.py  opener.py  repo.py  rqlite.py  stats.py
obsidian_cli/sql/file/: file.sql
obsidian_cli/sql/file_tag/: file_tag.sql
obsidian_cli/sql/link/: link.sql
obsidian_cli/sql/note/: note.sql
obsidian_cli/sql/tag/: tag.sql
