[metadata]
name = obsidian-cli
version = 0.0.1
description = dotfiles
author = Aymeric Guth
author_email = a@a.a
url = https://git.ars-virtualis.org/yul/mplayer

[options]
packages = find:
include-package-data = True

[options.packages.find]
exclude = 
    docs
    essais
    scripts

[options.packages_data]
mypackage = py.typed

[flake8]
# See https://github.com/PyCQA/pycodestyle/issues/373
ignore = E203
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88 
#max-complexity = 12
#select = B,C,E,F,W,B9
exclude = .venv/,tests/cases/*


