[metadata]
name = obsidian_cli
version = attr: obsidian_cli.__version__
author = Aymeric Guth
author_email = aymeric.guth@protonmail.com
url = https://git.ars-virtualis.org/yul/obsidian-cli
description = misc utiliy functions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
zip_safe = True
include_package_data = True

[options.packages.find]
exclude =
    tests*
    build*
    dist*
    docs*
    essais*
    lsfiles.egg-info*

[options.entry_points]
console_scripts = 
    obs=obsidian_cli.obsidian_cli:_main
    mdman=obsidian_cli.obsidian_cli:_mdman

[options.package_data]
lsfiles = py.typed
* = README.md

[flake8]
# See https://github.com/PyCQA/pycodestyle/issues/373
ignore = E203
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
#max-complexity = 12
#select = B,C,E,F,W,B9
exclude = .venv/, tests/*
